force-app/main/default/objects/Interest_Rate__c/Interest_Rate__c.object-meta.xml
<CustomObject>
    <label>Interest Rate</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Interest Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>