force-app/main/default/objects/Interest_Rate__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Interest Rates</relationshipLabel>
    <relationshipName>Interest_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>