force-app/main/default/objects/Interest_Rate__c/fields/Button_URL__c.field-meta.xml
<CustomField>
    <fullName>Button_URL__c</fullName>
    <label>Button URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>