force-app/main/default/objects/Interest_Rate__c/fields/Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest__c</fullName>
    <label>Total Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>