force-app/main/default/objects/Interest_Rate__c/fields/Widget_URL__c.field-meta.xml
<CustomField>
    <fullName>Widget_URL__c</fullName>
    <label>Widget URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>