force-app/main/default/objects/Interest_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank__c</columns>
    <columns>IsNew__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>